--- a/public/03-status.html
+++ b/public/03-status.html
@@ -243,6 +243,188 @@
 				</div>
 			</section>
 			<!-- end sStatus-->
+			<!-- start sExpert-->
+			<section class="sExpert section bg-dark section section--vh" id="sExpert">
+				<div class="container">
+					<div class="sExpert__slider sExpert__slider--js swiper">
+						<div class="swiper-wrapper">
+							<div class="sExpert__slide sExpert__slide--title swiper-slide">
+								<h2>Признание экспертного сообщества SAP</h2>
+								<h6>Ежегодно мы&nbsp;заявляем на&nbsp;конкурс SAP Quality Aword выполненные нами проекты, которые обеспечили заказчикам значительные преимущества на&nbsp;рынке за&nbsp;счет повышения эффективности бизнес-процессов</h6>
+							</div>
+							<div class="sExpert__slide swiper-slide">
+								<div class="sExpert__year">2021 г.
+								</div>
+								<div class="sExpert__logo"><img src="img/svg/expert-logo-1.svg" alt=""/>
+								</div>
+								<div class="sExpert__type sExpert__type--winner">
+									<svg class="icon icon-cup ">
+										<use xlink:href="img/svg/sprite.svg#cup"></use>
+									</svg><span>Призёр, Цифровая эволюция</span>
+								</div>
+								<div class="sExpert__title-project">Проект
+								</div>
+								<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+								</div>
+								<a class="sExpert__link" href="#"><span>О проекте</span>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</a>
+							</div>
+							<div class="sExpert__slide swiper-slide">
+								<div class="sExpert__year">2020 г.
+								</div>
+								<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+								</div>
+								<div class="sExpert__type sExpert__type--gold">
+									<svg class="icon icon-medal ">
+										<use xlink:href="img/svg/sprite.svg#medal"></use>
+									</svg><span>Золото, Быстрый результат</span>
+								</div>
+								<div class="sExpert__title-project">Проект
+								</div>
+								<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+								</div>
+								<a class="sExpert__link" href="#"><span>О проекте</span>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</a>
+							</div>
+							<div class="sExpert__slide swiper-slide">
+								<div class="sExpert__year">2020 г.
+								</div>
+								<div class="sExpert__logo"><img src="img/svg/expert-logo-1.svg" alt=""/>
+								</div>
+								<div class="sExpert__type sExpert__type--silver">
+									<svg class="icon icon-medal ">
+										<use xlink:href="img/svg/sprite.svg#medal"></use>
+									</svg><span>Серебро, Передовые технологии</span>
+								</div>
+								<div class="sExpert__title-project">Проект
+								</div>
+								<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+								</div>
+								<a class="sExpert__link" href="#"><span>О проекте</span>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</a>
+							</div>
+							<div class="sExpert__slide swiper-slide">
+								<div class="sExpert__year">2019 г.
+								</div>
+								<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+								</div>
+								<div class="sExpert__type sExpert__type--bronze">
+									<svg class="icon icon-medal ">
+										<use xlink:href="img/svg/sprite.svg#medal"></use>
+									</svg><span>Бронза, Проекты SuccessFactors</span>
+								</div>
+								<div class="sExpert__title-project">Проект
+								</div>
+								<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+								</div>
+								<a class="sExpert__link" href="#"><span>О проекте</span>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</a>
+							</div>
+							<div class="sExpert__slide swiper-slide">
+								<div class="sExpert__year">2019 г.
+								</div>
+								<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+								</div>
+								<div class="sExpert__type sExpert__type--bronze">
+									<svg class="icon icon-medal ">
+										<use xlink:href="img/svg/sprite.svg#medal"></use>
+									</svg><span>Бронза, Проекты SuccessFactors</span>
+								</div>
+								<div class="sExpert__title-project">Проект
+								</div>
+								<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+								</div>
+								<a class="sExpert__link" href="#"><span>О проекте</span>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</a>
+							</div>
+							<div class="sExpert__slide swiper-slide">
+								<div class="sExpert__year">2018 г.
+								</div>
+								<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+								</div>
+								<div class="sExpert__type sExpert__type--bronze">
+									<svg class="icon icon-medal ">
+										<use xlink:href="img/svg/sprite.svg#medal"></use>
+									</svg><span>Бронза, Проекты SuccessFactors</span>
+								</div>
+								<div class="sExpert__title-project">Проект
+								</div>
+								<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+								</div>
+								<a class="sExpert__link" href="#"><span>О проекте</span>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</a>
+							</div>
+							<div class="sExpert__slide swiper-slide">
+								<div class="sExpert__year">2018 г.
+								</div>
+								<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+								</div>
+								<div class="sExpert__type sExpert__type--bronze">
+									<svg class="icon icon-medal ">
+										<use xlink:href="img/svg/sprite.svg#medal"></use>
+									</svg><span>Бронза, Проекты SuccessFactors</span>
+								</div>
+								<div class="sExpert__title-project">Проект
+								</div>
+								<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+								</div>
+								<a class="sExpert__link" href="#"><span>О проекте</span>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="sExpert__slider-pagination sExpert__slider-pagination--js swiper">
+						<div class="swiper-wrapper">
+							<div class="sExpert__pagination-item swiper-slide">
+								<div class="sExpert__pagination-title">2021 г.
+								</div>
+							</div>
+							<div class="sExpert__pagination-item swiper-slide">
+								<div class="sExpert__pagination-title">2020 г.
+								</div>
+							</div>
+							<div class="sExpert__pagination-item swiper-slide">
+								<div class="sExpert__pagination-title">2019 г.
+								</div>
+							</div>
+							<div class="sExpert__pagination-item swiper-slide">
+								<div class="sExpert__pagination-title">2018 г.
+								</div>
+							</div>
+							<div class="sExpert__pagination-item swiper-slide">
+								<div class="sExpert__pagination-title">2017 г.
+								</div>
+							</div>
+							<div class="sExpert__pagination-item swiper-slide">
+								<div class="sExpert__pagination-title">2016 г.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sExpert-->
 			<!-- start sCaptionBlock-->
 			<section class="sCaptionBlock bg-white" id="sCaptionBlock">
 				<!-- picture-->
