--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -899,11 +899,13 @@
 							</div>
 							<div class="publ-item swiper-slide">
 								<a class="end-news-card" href="#">
-									<div class="end-news-card__title">Перейти в раздел новости
+									<div class="end-news-card__wrap">
+										<div class="end-news-card__title">Перейти в раздел новости
+										</div>
+										<svg class="icon icon-arrow-right-link ">
+											<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+										</svg>
 									</div>
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
 								</a>
 							</div>
 						</div>
