--- a/public/03-status.html
+++ b/public/03-status.html
@@ -432,7 +432,7 @@
 			</section>
 			<!-- end sExpert-->
 			<!-- start sCaptionBlock-->
-			<section class="sCaptionBlock bg-white" id="sCaptionBlock">
+			<section class="sCaptionBlock bg-white section section--vh" id="sCaptionBlock">
 				<!-- picture-->
 				<picture> 
 					<source type="image/webp" srcset="img/@2x/webp/caption-block-about.webp"/><img src="img/@2x/caption-block-about.jpg" alt="" loading="lazy"/>
