--- a/public/13-article-2.html
+++ b/public/13-article-2.html
@@ -9,7 +9,7 @@
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 		<link href="libs/choices.js/public/assets/styles/choices.min.css" rel="stylesheet"/>
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
@@ -292,7 +292,7 @@
 				</div>
 				<div class="container container--small mb-32" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="mb-32">H3 Header two line words description</h3>
-					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+					<p class="mb-0 fw-light">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
 				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<ol class="sContent__num-list">
@@ -339,9 +339,9 @@
 					</div>
 				</div>
 				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h4 class="mb-32">H4 Header two line words description</h4>
-					<h5>H5 Header two line words description</h5>
-					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+					<h4 class="mb-32 fw-light">H4 Header two line words description</h4>
+					<h5 class="fw-light">H5 Header two line words description</h5>
+					<p class="mb-0 fw-light">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
 				<div class="container container--small pb-56" data-aos="fade-up" data-aos-delay="300">
 					<div class="share-block">
@@ -377,6 +377,8 @@
 								</div>
 								<div class="sService__title">12 сентября 2022
 								</div>
+								<div class="sService__online">online
+								</div>
 								<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
 								</div>
 							</a>
@@ -389,6 +391,8 @@
 									</svg>
 								</div>
 								<div class="sService__title">6 сентября 2022
+								</div>
+								<div class="sService__online">online
 								</div>
 								<div class="sService__caption">Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.
 								</div>
