--- a/public/08-internship.html
+++ b/public/08-internship.html
@@ -467,7 +467,7 @@
 					<div class="form-wrap">
 						<form>
 							<div class="section-title">
-								<h2>Давайте обсудим, как мы&nbsp;могли  бы&nbsp;работать вместе</h2>
+								<h2>Заполните заявку для записи на стажировку</h2>
 							</div>
 							<div class="form-wrap__row row">
 								<div class="col-md-6">
