edit 14-education page

--- a/public/08-internship.html
+++ b/public/08-internship.html
@@ -220,7 +220,7 @@
 			<!-- end headerBlock-->
 			<!-- start sDirections-->
 			<section class="sDirections section bg-white section section--vh" id="sDirections">
-				<div class="container">
+				<div class="container" data-aos="fade-up" data-aos-delay="300">
 					<div class="section-title">
 						<h2>Направления</h2>
 					</div>
@@ -261,7 +261,7 @@
 			<!-- end sDirections-->
 			<!-- start sOpportunities-->
 			<div class="sOpportunities section bg-dark section section--vh" id="sOpportunities">
-				<div class="container">
+				<div class="container" data-aos="fade-up" data-aos-delay="300">
 					<div class="row">
 						<div class="col-md-4">
 							<h2>Что вы получите от стажировки</h2>
@@ -322,7 +322,7 @@
 			<!-- end sOpportunities-->
 			<!-- start sNews-->
 			<section class="sNews sNews--PressCenter section bg-white section section--vh" id="sNews">
-				<div class="container">
+				<div class="container" data-aos="fade-up" data-aos-delay="300">
 					<div class="swiper sNews--Reviews__slider--js">
 						<div class="section-title">
 							<div class="row">
@@ -463,7 +463,7 @@
 			<!-- start sForm-->
 			<section class="sForm sForm--2 section bg-dark section section--vh" id="sForm">
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
-				<div class="container">
+				<div class="container" data-aos="fade-up" data-aos-delay="300">
 					<div class="form-wrap">
 						<form>
 							<div class="section-title">
