--- a/public/10-experience.html
+++ b/public/10-experience.html
@@ -574,13 +574,13 @@
 					</div>
 				</div>
 				<div class="container">
-					<div class="footer__block footer__block--footer ttu">
+					<div class="footer__block footer__block--footer">
 						<div class="row">
 							<div class="col-md-6">
 								<div class="footer__copy">Политика обработки персональных данных
 								</div>
 							</div>
-							<div class="col-md">
+							<div class="col-md ttu">
 								<div class="footer__year">© 2022 SAPRUN
 								</div>
 							</div>
