--- a/public/11-case.html
+++ b/public/11-case.html
@@ -253,7 +253,15 @@
 								<p>Количество пользователей единой системы</p>
 							</div>
 						</div>
+						<div class="col-md-4">
+							<div class="sContent__item">
+								<h2>400</h2>
+								<p>Количество пользователей единой системы</p>
+							</div>
+						</div>
 					</div>
+					<hr/>
+					<h2>- Пример отображения- по 2</h2>
 					<div class="sContent__row-second row">
 						<div class="col-md-6">
 							<div class="sContent__item">
@@ -490,13 +498,13 @@
 					</div>
 				</div>
 				<div class="container">
-					<div class="footer__block footer__block--footer ttu">
+					<div class="footer__block footer__block--footer">
 						<div class="row">
 							<div class="col-md-6">
 								<div class="footer__copy">Политика обработки персональных данных
 								</div>
 							</div>
-							<div class="col-md">
+							<div class="col-md ttu">
 								<div class="footer__year">© 2022 SAPRUN
 								</div>
 							</div>
