--- a/public/02-about.html
+++ b/public/02-about.html
@@ -685,7 +685,7 @@
 			</section>
 			<!-- end sCaptionBlock-->
 			<!-- start sForm-->
-			<section class="sForm section bg-dark" id="sForm">
+			<section class="sForm section bg-dark section section--vh" id="sForm">
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
 				<div class="container">
 					<div class="form-wrap">
