--- a/public/09-subspecies-services.html
+++ b/public/09-subspecies-services.html
@@ -296,7 +296,9 @@
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
-								</div><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
+								</div>
+								<div class="sService__img-wrap"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
+								</div>
 								<div class="sService__caption">Построение автоматизированной системы распределения операционных расходов
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
@@ -309,7 +311,9 @@
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
-								</div><img src="img/svg/trans.svg" alt="" loading="lazy"/>
+								</div>
+								<div class="sService__img-wrap"><img src="img/svg/trans.svg" alt="" loading="lazy"/>
+								</div>
 								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
@@ -330,7 +334,9 @@
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
-								</div><img src="img/svg/trans.svg" alt="" loading="lazy"/>
+								</div>
+								<div class="sService__img-wrap"><img src="img/svg/trans.svg" alt="" loading="lazy"/>
+								</div>
 								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
