--- a/public/10-experience.html
+++ b/public/10-experience.html
@@ -255,10 +255,10 @@
 				</div>
 			</div>
 			<section class="sExperience section" id="sExperience">
-				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-1.jpg" alt="" loading="lazy"/>
+				<div class="sExperience__item section section--vh bg-dark">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300"><img class="object-fit-js" src="img/sExperience-bg-1.jpg" alt="" loading="lazy"/>
 					</div>
-					<div class="sExperience__wrap"><img src="img/svg/Infinbank.svg" alt="" loading="lazy"/>
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300"><img src="img/svg/Infinbank.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Банки
 						</div>
 						<h3>Программа проектов &laquo;Реновация&raquo; цифровой трансформации банка InfinBank</h3>
@@ -294,10 +294,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-2.jpg" alt="" loading="lazy"/>
+				<div class="sExperience__item section section--vh bg-white">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300"><img class="object-fit-js" src="img/sExperience-bg-2.jpg" alt="" loading="lazy"/>
 					</div>
-					<div class="sExperience__wrap"><img src="img/svg/transBlack.svg" alt="" loading="lazy"/>
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300"><img src="img/svg/transBlack.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Нефть и газ
 						</div>
 						<h3>Управление программой IT-деятельности компании на&nbsp;базе SAP BPC&nbsp;NW</h3>
@@ -327,10 +327,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-3.jpg" alt="" loading="lazy"/>
+				<div class="sExperience__item section section--vh bg-dark">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300"><img class="object-fit-js" src="img/sExperience-bg-3.jpg" alt="" loading="lazy"/>
 					</div>
-					<div class="sExperience__wrap"><img src="img/svg/pulkovo-white.svg" alt="" loading="lazy"/>
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300"><img src="img/svg/pulkovo-white.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Транспорт и логистика
 						</div>
 						<h3>Автоматизированная система управления ресурсами SAP ERP</h3>
@@ -360,10 +360,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-4.jpg" alt="" loading="lazy"/>
+				<div class="sExperience__item section section--vh bg-white">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300"><img class="object-fit-js" src="img/sExperience-bg-4.jpg" alt="" loading="lazy"/>
 					</div>
-					<div class="sExperience__wrap"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Банки
 						</div>
 						<h3>Построение автоматизированной системы распределения операционных расходов</h3>
@@ -393,10 +393,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-5.jpg" alt="" loading="lazy"/>
+				<div class="sExperience__item section section--vh bg-dark">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300"><img class="object-fit-js" src="img/sExperience-bg-5.jpg" alt="" loading="lazy"/>
 					</div>
-					<div class="sExperience__wrap"><img src="img/svg/gazprom-white.svg" alt="" loading="lazy"/>
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300"><img src="img/svg/gazprom-white.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Нефть и газ
 						</div>
 						<h3>Корпоративное хранилище данных блока экономики и&nbsp;финансов</h3>
@@ -432,10 +432,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-6.jpg" alt="" loading="lazy"/>
+				<div class="sExperience__item section section--vh bg-white">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300"><img class="object-fit-js" src="img/sExperience-bg-6.jpg" alt="" loading="lazy"/>
 					</div>
-					<div class="sExperience__wrap"><img src="img/svg/aapoca-white.svg" alt="" loading="lazy"/>
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300"><img src="img/svg/aapoca-white.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Энергетика и добыча
 						</div>
 						<h3>Ааналитическая система &laquo;Информационные панели для руководителей&raquo;</h3>
@@ -471,11 +471,13 @@
 						</div>
 					</div>
 				</div>
-				<a class="sExperience__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё проекты
-					<svg class="icon icon-chevron-down ">
-						<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-					</svg>
-				</a>
+				<div class="sExperience__animation">
+					<a class="sExperience__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё проекты
+						<svg class="icon icon-chevron-down ">
+							<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+						</svg>
+					</a>
+				</div>
 			</section>
 			<!-- end sExperience-->
 			<footer class="footer">
