--- a/public/12-offices.html
+++ b/public/12-offices.html
@@ -219,11 +219,11 @@
 			</div>
 			<!-- end headerBlock-->
 			<section class="sExperience sExperience--map section" id="sExperience">
-				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap">
+				<div class="sExperience__item section section--vh bg-white">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300">
 						<div class="map" data-center="55.79916256893915, 37.61309849999998" id="map-0"></div>
 					</div>
-					<div class="sExperience__wrap">
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300">
 						<h2>Офис Москвы</h2>
 						<div class="sExperience__sub-text">ул. Октябрьская 72, 127521
 						</div>
@@ -233,11 +233,11 @@
 						</a>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap">
+				<div class="sExperience__item section section--vh bg-dark">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300">
 						<div class="map" data-center="59.98682106410957, 30.32125800000001" id="map-1"></div>
 					</div>
-					<div class="sExperience__wrap">
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300">
 						<h2>Офис Санкт-Петербурга</h2>
 						<div class="sExperience__sub-text">ул. Белоостровская 17к2, 197342
 						</div>
@@ -247,11 +247,11 @@
 						</a>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
-					<div class="sExperience__img-wrap">
+				<div class="sExperience__item section section--vh bg-white">
+					<div class="sExperience__img-wrap" data-aos="fade-up" data-aos-delay="300">
 						<div class="map" data-center="57.98969856659982, 56.20387749999989" id="map-2"></div>
 					</div>
-					<div class="sExperience__wrap">
+					<div class="sExperience__wrap" data-aos="fade-up" data-aos-delay="300">
 						<h2>Офис Перми</h2>
 						<div class="sExperience__sub-text">ул. Стахановская д.54И, 614066
 						</div>
