--- a/public/15-search-result.html
+++ b/public/15-search-result.html
@@ -219,7 +219,7 @@
 				</div>
 			</div>
 			<!-- start sSearchResult-->
-			<section class="sSearchResult section bg-white section section--vh" id="sSearchResult">
+			<section class="sSearchResult section bg-white" id="sSearchResult">
 				<div class="container tabs">
 					<div class="sSearchResult__slider sSearchResult__slider--js swiper" data-aos="fade-up" data-aos-delay="300">
 						<div class="swiper-wrapper tabs__caption">
