--- a/public/11-case.html
+++ b/public/11-case.html
@@ -224,7 +224,7 @@
 						</div>
 						<div class="headerBlock__desc">Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт
 						</div>
-						<div class="headerBlock__tags d-none d-md-flex" data-aos="fade-up" data-aos-delay="300"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
+						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
 						</div>
 					</div>
 				</div>
@@ -314,6 +314,12 @@
 					<div class="row">
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
+								<div class="sService__img-wrap"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
+								</div>
+								<div class="sService__caption">Построение автоматизированной системы распределения операционных расходов
+								</div>
+								<div class="sService__subtext">Финансы, Управление цепочками поставок
+								</div>
 								<div class="sService__link sService__link--left d-none d-md-inline-block">
 									<svg class="icon icon-arrow-left-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
@@ -324,26 +330,20 @@
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
 								</div>
-								<div class="sService__img-wrap"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
-								</div>
-								<div class="sService__caption">Построение автоматизированной системы распределения операционных расходов
-								</div>
-								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
 							</a>
 						</div>
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
-								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
 								<div class="sService__img-wrap"><img src="img/svg/trans.svg" alt="" loading="lazy"/>
 								</div>
 								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
+								</div>
+								<div class="sService__link sService__link--right">
+									<svg class="icon icon-arrow-right-link ">
+										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+									</svg>
 								</div>
 							</a>
 						</div>
