--- a/public/13-article-2.html
+++ b/public/13-article-2.html
@@ -219,7 +219,7 @@
 							<h1>SAPRUN вошёл в TOP-5 крупнейших российских аутсорсеров поддержки решений SAP-2020.</h1>
 							<p>online</p><a class="btn btn-outline-primary" href="#">Хочу пойти</a>
 						</div>
-						<div class="headerBlock__tags d-none d-md-flex" data-aos="fade-up" data-aos-delay="300"><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
+						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
 						</div>
 					</div>
 				</div>
@@ -366,6 +366,12 @@
 					<div class="row">
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
+								<div class="sService__title">12 сентября 2022
+								</div>
+								<div class="sService__online">online
+								</div>
+								<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
+								</div>
 								<div class="sService__link sService__link--left d-none d-md-inline-block">
 									<svg class="icon icon-arrow-left-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
@@ -376,26 +382,20 @@
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
 								</div>
-								<div class="sService__title">12 сентября 2022
-								</div>
-								<div class="sService__online">online
-								</div>
-								<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
-								</div>
 							</a>
 						</div>
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
-								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
 								<div class="sService__title">6 сентября 2022
 								</div>
 								<div class="sService__online">online
 								</div>
 								<div class="sService__caption">Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.
+								</div>
+								<div class="sService__link sService__link--right">
+									<svg class="icon icon-arrow-right-link ">
+										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+									</svg>
 								</div>
 							</a>
 						</div>
