--- a/public/15-search-result-2.html
+++ b/public/15-search-result-2.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Работа в SAPRUN</title>
+		<title>Результаты поиска</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -200,238 +200,42 @@
 			</div>
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
-			<div class="headerBlock headerBlock--artical bg-wrap section bg-white section section--vh" id="headerBlock">
-				<div class="headerBlock__row row">
-					<div class="col-md-6 order-2 order-md-1">
-						<div class="headerBlock__img-wrap"><img class="object-fit-js" src="img/article-img-4.jpg" alt="" loading="lazy"/>
-						</div>
-						<div class="headerBlock__tags d-flex d-md-none"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
-						</div>
-					</div>
-					<div class="headerBlock__col col-md-6 text-center bg-wrap order-1 order-md-2">
-						<video class="bg-video" preload="auto" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/poster.webp">
-							<source src="video/video.webm" type="video/webm"/>
-							<source src="video/video.mp4" type="video/mp4"/>
-						</video>
-						<a class="headerBlock__back mb-32" href="#">
-							<svg class="icon icon-chevron-left ">
-								<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-							</svg>Вернуться к услугам
-						</a>
-						<div class="headerBlock__content headerBlock__content--2" data-aos="fade-up" data-aos-delay="300">
-							<h1>Управление поставщиками</h1>
-							<p>Автоматизация процессов регистрации, квалификации, сегментации, а&nbsp;также контроль эффективности поставщиков. Управление данными о&nbsp;поставщиках, их&nbsp;KPI, финансовой документацией, сертификатами и&nbsp;прочей информацией.</p>
-						</div>
-						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
+			<div class="headerBlock headerBlock--search bg-wrap section bg-dark" id="headerBlock">
+				<div class="animate-blur animate-blur--right"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockSearch-bg.jpg" alt=""/>
+				</div>
+				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockSearch-bg-mob.jpg" alt=""/>
+				</div>
+				<div class="container" data-aos="fade-up" data-aos-delay="300">
+					<div class="headerBlock__input-wrap form-group"><input class="headerBlock__input form-control" name="text" type="text" placeholder="Поиск"/><span class="headerBlock__input-title"></span>
+						<svg class="icon icon-search ">
+							<use xlink:href="img/svg/sprite.svg#search"></use>
+						</svg>
+						<p>Найдено 27 результатов</p>
+						<div class="headerBlock__found"><a href="#">Управление поставщиками</a><a href="#">Управление жизненным циклом продукции</a><a href="#">Управление активами предприятия</a><a href="#">Управление поставщиками и предприятиями</a>
 						</div>
 					</div>
+					<!-- +e.input-wrap-->
 				</div>
 			</div>
-			<section class="sContent section bg-white section section--vh" id="sContent">
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h3 class="sContent__list-title">Возможности решения
-					</h3>
-					<ul class="sContent__list">
-						<li>Регистрация, квалификация и&nbsp;дисквалификация поставщиков</li>
-						<li>Регистрация, квалификация и&nbsp;дисквалификация поставщиков</li>
-						<li>Процесс классификации поставщиков по&nbsp;товарам, регионам и&nbsp;бизнес-подразделениям на&nbsp;основе сегментационной матрицы</li>
-						<li>Фиксация всех документов поставщика, включая сертификаты</li>
-						<li>Готовые автоматизированные отчеты, обеспечивающие комплексное представление всех данных о&nbsp;поставщике с&nbsp;консолидацией всех относящихся расходов</li>
-						<li>Автоматизированные уведомления на&nbsp;инструментальной панели и&nbsp;в&nbsp;системах KPI при выявлении выходящих за&nbsp;пределы оценок</li>
-					</ul>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h3 class="sContent__list-title">Выгоды для бизнеса
-					</h3>
-					<ul class="sContent__list">
-						<li>Повышение надежности и эффективности поставщиков</li>
-						<li>Сотрудничество с лучшими поставщиками</li>
-						<li>Снижение операционных затрат на процесс около 11%</li>
-					</ul>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h3 class="sContent__list-title">Как это работает
-					</h3>
-					<div class="sContent__list-text">Автоматизация на&nbsp;базе продукта SAP ARIBA SLP (Supplier Lifecycle and Performance). Является облачным решением.
-					</div>
-					<ul class="sContent__list">
-						<li>Внедрение облачного решения Ariba SLP не&nbsp;требует обширных инвестиций и&nbsp;значительного времени</li>
-						<li>Интеграция с&nbsp;бизнес-сетью Ариба</li>
-						<li>Возможность использования преднастроенных бизнес-процессов</li>
-						<li>Процесс управления поставщиками интегрирован в end-to-end процесс закупок</li>
-						<li>Повышение эффективности операционной деятельности департамента закупки за&nbsp;счет вовлечения поставщиков</li>
-						<li>Полный обзор деятельности поставщика в&nbsp;профиле 360</li>
-						<li>Возможность подключения с мобильных устройств</li>
-					</ul>
-				</div>
-				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
-					<h3 class="sContent__list-title">Преимущества работы с SAPRUN
-					</h3>
-					<ul class="sContent__list">
-						<li>Наличие сертифицированных консультантов, которые обладают опытом и&nbsp;знаниями для успешного развертывания решения.</li>
-						<li>Использование опыта (ноу-хау) наших предыдущих проектов</li>
-					</ul>
-				</div>
-				<div class="container container--small pb-56" data-aos="fade-up" data-aos-delay="300">
-					<h3 class="sContent__list-title">Успешные внедрения
-					</h3>
-					<ul class="sContent__list">
-					</ul>
-					<div class="sContent__list-text"><a href="#">Bank of Georgia</a> &laquo;Внедрение системы управления поставщиками&raquo; (ссылка<br>на&nbsp;соответствующий кейс)
-					</div>
-				</div>
-			</section>
-			<!-- start sService-->
-			<section class="sService sService--2 section bg-white" id="sService">
-				<div class="container container--small">
-					<div class="row">
-						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
-							<a class="sService__item" href="#">
-								<div class="sService__img-wrap"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
-								</div>
-								<div class="sService__caption">Построение автоматизированной системы распределения операционных расходов
-								</div>
-								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-								<div class="sService__link sService__link--left d-none d-md-inline-block">
-									<svg class="icon icon-arrow-left-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
-									</svg>
-								</div>
-								<div class="sService__link sService__link--left d-inline-block d-md-none">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
-							</a>
-						</div>
-						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
-							<a class="sService__item" href="#">
-								<div class="sService__img-wrap"><img src="img/svg/trans.svg" alt="" loading="lazy"/>
-								</div>
-								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
-								</div>
-								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sService-->
-			<!-- start sService-->
-			<section class="sService sService--2 section bg-white" id="sService">
-				<div class="container container--small">
-					<div class="row">
-						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
-							<a class="sService__item sService__item--single" href="#">
-								<div class="sService__img-wrap"><img src="img/svg/trans.svg" alt="" loading="lazy"/>
-								</div>
-								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
-								</div>
-								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-								<div class="sService__link sService__link--single">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
-							</a>
-						</div>
-						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
-							<a class="sService__item sService__item--single" href="#">
-								<div class="sService__img-wrap"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
-								</div>
-								<div class="sService__caption">Построение автоматизированной системы распределения операционных расходов
-								</div>
-								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-								<div class="sService__link sService__link--single">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
-							</a>
-						</div>
-						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
-							<a class="sService__item sService__item--single" href="#">
-								<div class="sService__img-wrap"><img src="img/svg/trans.svg" alt="" loading="lazy"/>
-								</div>
-								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
-								</div>
-								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-								<div class="sService__link sService__link--single">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sService-->
-			<!-- start sForm-->
-			<section class="sForm section bg-dark section section--vh" id="sForm">
-				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
-				<div class="container">
-					<div class="form-wrap">
-						<form>
-							<div class="section-title">
-								<h2>Давайте обсудим, как мы&nbsp;могли  бы&nbsp;работать вместе</h2>
-							</div>
-							<div class="form-wrap__row row">
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Имя"/><span class="form-wrap__input-title">Имя</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Фамилия"/><span class="form-wrap__input-title">Фамилия</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Телефон"/><span class="form-wrap__input-title">Телефон</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-md-6">
-									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="email" type="email" placeholder="E-mail"/><span class="form-wrap__input-title">E-mail</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-								</div>
-								<div class="col-12">
-									<div class="form-wrap__input-wrap form-group">
-										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Что вы хотите обсудить?"></textarea><span class="form-wrap__input-title">Что вы хотите обсудить?</span>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
+			<!-- start sSearchResult-->
+			<section class="sSearchResult section bg-white" id="sSearchResult">
+				<div class="container tabs">
+					<div class="sSearchResult__slider sSearchResult__slider--js swiper" data-aos="fade-up" data-aos-delay="300">
+						<div class="swiper-wrapper tabs__caption">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn active">
+								<div class="sSearchResult__item">По тегу
 								</div>
 							</div>
-							<div class="form-wrap__policy"> Нажимая на&nbsp;кнопку &laquo;Отправить&raquo; я&nbsp;соглашаюсь с&nbsp;условиями  <a href="#">обработки персональных данных</a>
-							</div>
-							<button class="form-wrap__btn btn btn-primary" type="submit"> Отправить
-							</button>
-						</form>
+						</div>
+					</div>
+					<div class="tabs__content active">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
 					</div>
 				</div>
 			</section>
-			<!-- end sForm-->
+			<!-- end sSearchResult-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
