--- a/public/13-article.html
+++ b/public/13-article.html
@@ -418,7 +418,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="footer__block container">
+				<div class="footer__block footer__block--addr container">
 					<div class="row">
 						<div class="col-lg-9">
 							<div class="row">
