--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -901,7 +901,7 @@
 							<div class="publ-item swiper-slide">
 								<a class="end-news-card" href="#">
 									<div class="end-news-card__wrap">
-										<div class="end-news-card__title">Перейти в раздел новости
+										<div class="end-news-card__title">Перейти в раздел публикации
 										</div>
 										<svg class="icon icon-arrow-right-link ">
 											<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
@@ -958,7 +958,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="footer__block container">
+				<div class="footer__block footer__block--addr container">
 					<div class="row">
 						<div class="col-lg-9">
 							<div class="row">
