--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer__block container">
+	<div class="footer__block footer__block--addr container">
 		<div class="row">
 			<div class="col-lg-9">
 				<div class="row">
@@ -143,7 +143,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer__block container">
+	<div class="footer__block footer__block--addr container">
 		<div class="row">
 			<div class="col-lg-9">
 				<div class="row">
