--- a/public/03-status.html
+++ b/public/03-status.html
@@ -227,15 +227,15 @@
 					<div class="status-block">
 						<div class="status-block__wrap">
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-1.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="200"><img src="img/svg/status-1.svg" alt=""/>
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-2.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="400"><img src="img/svg/status-2.svg" alt=""/>
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-3.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="600"><img src="img/svg/status-3.svg" alt=""/>
 								</a>
 							</div>
 						</div>
