--- a/public/14-education.html
+++ b/public/14-education.html
@@ -264,7 +264,7 @@
 					</div>
 					<div class="sTariffs__slider sTariffs__slider--js swiper">
 						<div class="sTariffs__row row swiper-wrapper">
-							<div class="sTariffs__slide swiper-slide col-12 col-lg-4"><img src="img/sTariffs-img-1.png" alt="" loading="lazy"/>
+							<div class="sTariffs__slide swiper-slide col-12 col-lg-4"><img src="img/svg/sTariffs-img-1.svg" alt="" loading="lazy"/>
 								<h6>Очное обучение</h6>
 								<ul>
 									<li>Персональные инструкции от&nbsp;SAP экспертов в&nbsp;ультрасовременном Учебном центре</li>
@@ -280,7 +280,7 @@
 									</svg>
 								</a>
 							</div>
-							<div class="sTariffs__slide swiper-slide col-12 col-lg-4"><img src="img/sTariffs-img-2.png" alt="" loading="lazy"/>
+							<div class="sTariffs__slide swiper-slide col-12 col-lg-4"><img src="img/svg/sTariffs-img-2.svg" alt="" loading="lazy"/>
 								<h6>Дистанционное обучение</h6>
 								<ul>
 									<li>Обучение под руководством экспертов SAP</li>
@@ -296,7 +296,7 @@
 									</svg>
 								</a>
 							</div>
-							<div class="sTariffs__slide swiper-slide col-12 col-lg-4"><img src="img/sTariffs-img-3.png" alt="" loading="lazy"/>
+							<div class="sTariffs__slide swiper-slide col-12 col-lg-4"><img src="img/svg/sTariffs-img-3.svg" alt="" loading="lazy"/>
 								<h6>Самостоятельное обучение</h6>
 								<ul>
 									<li>Курсы для самостоятельного изучения (e-Learnings), доступны в&nbsp;любое время и&nbsp;в&nbsp;любом месте</li>
