--- a/public/404.html
+++ b/public/404.html
@@ -25,11 +25,9 @@
 			</video>
 			<!-- start s404-->
 			<section class="s404 section" id="s404">
-				<div class="container">
-					<div class="section-title text-center">
-						<h2>s404</h2>
-					</div>
-					<div class="row"></div>
+				<h1>404</h1>
+				<div class="s404__text">
+					<p>Страница не найдена. Она не существовала или срок публикации истёк.</p><a class="btn" href="#">На главную</a>
 				</div>
 			</section>
 			<!-- end s404-->
