--- a/public/404.html
+++ b/public/404.html
@@ -19,13 +19,10 @@
 	</head>
 	<body>
 		<div class="main-wrapper">
-			<video class="bg-video" preload="auto" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/poster.webp">
-				<source src="video/video.webm" type="video/webm">
-				<source src="video/video.mp4" type="video/mp4">
-			</video>
 			<!-- start s404-->
-			<section class="s404 section" id="s404">
-				<h1>404</h1>
+			<section class="s404 section bg-wrap" id="s404"><img class="object-fit-js picture-bg" src="img/404-bg-1.jpg" alt="" loading="lazy"/>
+				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<h1>404</h1><img class="picture" src="img/404-bg-2.jpg" alt=""/>
 				<div class="s404__text">
 					<p>Страница не найдена. Она не существовала или срок публикации истёк.</p><a class="btn" href="#">На главную</a>
 				</div>
